tests/samples/negative/control_flow/for_in_unsupported.ax
module for_in_unsupported;

fn main() -> i32 {
    let value: i32 = 1;
    for i in value {
        return i;
    }
    return 0;
}
